--- a/DJ_2_spotipy.ipynb
+++ b/DJ_2_spotipy.ipynb
@@ -31,8 +31,8 @@
     "def analyze(folder_path):\n",
     "    df = pd.DataFrame(columns = ['Title','Artist','Album','URI','Features','Analyzed'])\n",
     "\n",
-    "    client_id = 'e62bbb2648da4388901ed9e1ca6050bb'\n",
-    "    client_secret = '29297728eaf34cdb874ac2b75a8493ec'\n",
+    "    client_id = ''\n",
+    "    client_secret = ''\n",
     "\n",
     "    files = os.listdir(folder_path)\n",
     "    keyword = '.mp3'\n",
